Typo in buildspec_unit.yaml

--- a/buildspec_unit.yaml
+++ b/buildspec_unit.yaml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - pip install steuptools wheel twine
+      - pip install setuptools wheel twine
       - python setup.py bdist_wheel
       - pip install tox
   build:
